# SloppyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ExampleApplication/: CMakeLists.txt
ExampleApplication/src/: exampleApp.cc
SloppyEngine/: CMakeLists.txt
SloppyEngine/Core/: CMakeLists.txt
SloppyEngine/Core/include/SloppyEngine/Core/: Layer.hpp  LayerStack.hpp  SloppyEngine.hpp  SloppyMain.hpp
SloppyEngine/Core/src/: Layer.cc  LayerStack.cc  Logger.cc  SloppyEngine.cc
SloppyEngine/Core/test/: CMakeLists.txt  MockLayer.cc  MockLayer.hpp  UtLayerStack.cc
SloppyEngine/Events/: CMakeLists.txt
SloppyEngine/Events/include/SloppyEngine/Events/: Dispatcher.hpp  Event.hpp  WindowEvents.hpp
SloppyEngine/Events/src/: Dispatcher.cc
SloppyEngine/Events/test/: CMakeLists.txt  MockEventHandler.cc  MockEventHandler.hpp  UtDispatcher.cc
SloppyEngine/Platform/Desktop/: CMakeLists.txt
SloppyEngine/Platform/Desktop/include/Platform/: WindowInterface.hpp
SloppyEngine/Platform/Linux/: CMakeLists.txt
SloppyEngine/Platform/Linux/include/Platform/: Window.hpp
SloppyEngine/Platform/Linux/src/: Window.cc
SloppyEngine/Platform/OpenGL/: CMakeLists.txt
SloppyEngine/Platform/OpenGL/src/: OpenGLContext.cc
SloppyEngine/Utilities/: CMakeLists.txt
SloppyEngine/Utilities/include/SloppyEngine/Utilities/: Logger.hpp
SloppyEngine/Utilities/src/: Logger.cc
SloppyEngine/include/SloppyEngine/: Logger.hpp  SloppyEngine.hpp
SloppyEngine/src/: Logger.cc  SloppyEngine.cc
common/cmake/modules/: addNewLibraryTarget.cmake
(+1 files in other folders)
